--- a/TvGuide.html
+++ b/TvGuide.html
@@ -1,549 +1,562 @@
 <html>
   <!-- head tag -->
   <head>
+    <!-- The meta tag -->
+    <meta http-equiv="Content-Type" content="text/html charset=utf-8"/>
+    <!-- Link the stylesheet -->
+    <link rel="stylesheet" type="text/css" href="TvGuide.css"/>
     <!-- title tag -->
     <title>Tv Guide</title>
   </head>
   <!-- body tag -->
   <body>
     <table>
+      <caption>sv.hbonordic.tv</caption>
       <tr>
-        <th>sv.hbonordic.tv</th>
+        <th>Start Time</th>
+        <th>Stop Time</th>
+        <th>Title</th>
       </tr>
       <tr>
         <td>2015-10-25, 02:25</td>
         <td>2015-10-25, 02:50</td>
-        <td>Doll &amp; Em</td>
+        <td class="Title">Doll &amp; Em</td>
       </tr>
       <tr>
         <td>2015-10-25, 02:50</td>
         <td>2015-10-25, 03:15</td>
-        <td>Doll &amp; Em</td>
+        <td class="Title">Doll &amp; Em</td>
       </tr>
       <tr>
         <td>2015-10-25, 03:15</td>
         <td>2015-10-25, 03:55</td>
-        <td>12 Monkeys</td>
+        <td class="Title">12 Monkeys</td>
       </tr>
       <tr>
         <td>2015-10-25, 04:00</td>
         <td>2015-10-25, 04:30</td>
-        <td>Togetherness</td>
+        <td class="Title">Togetherness</td>
       </tr>
       <tr>
         <td>2015-10-25, 04:30</td>
         <td>2015-10-25, 05:15</td>
-        <td>Strike Back</td>
+        <td class="Title">Strike Back</td>
       </tr>
       <tr>
         <td>2015-10-25, 05:15</td>
         <td>2015-10-25, 07:15</td>
-        <td>Varian's War</td>
+        <td class="Title">Varian's War</td>
       </tr>
       <tr>
         <td>2015-10-25, 07:15</td>
         <td>2015-10-25, 08:15</td>
-        <td>State of Play: Happiness</td>
+        <td class="Title">State of Play: Happiness</td>
       </tr>
       <tr>
         <td>2015-10-25, 08:15</td>
         <td>2015-10-25, 09:55</td>
-        <td>Baseketball</td>
+        <td class="Title">Baseketball</td>
       </tr>
       <tr>
         <td>2015-10-25, 09:55</td>
         <td>2015-10-25, 11:15</td>
-        <td>Ascension</td>
+        <td class="Title">Ascension</td>
       </tr>
       <tr>
         <td>2015-10-25, 11:15</td>
         <td>2015-10-25, 12:05</td>
-        <td>Strike Back</td>
+        <td class="Title">Strike Back</td>
       </tr>
       <tr>
         <td>2015-10-25, 12:05</td>
         <td>2015-10-25, 12:50</td>
-        <td>Strike Back</td>
+        <td class="Title">Strike Back</td>
       </tr>
       <tr>
         <td>2015-10-25, 12:50</td>
         <td>2015-10-25, 13:40</td>
-        <td>Strike Back</td>
+        <td class="Title">Strike Back</td>
       </tr>
       <tr>
         <td>2015-10-25, 13:40</td>
         <td>2015-10-25, 14:25</td>
-        <td>Strike Back</td>
+        <td class="Title">Strike Back</td>
       </tr>
       <tr>
         <td>2015-10-25, 14:25</td>
         <td>2015-10-25, 15:10</td>
-        <td>Strike Back</td>
+        <td class="Title">Strike Back</td>
       </tr>
       <tr>
         <td>2015-10-25, 15:10</td>
         <td>2015-10-25, 15:55</td>
-        <td>Strike Back</td>
+        <td class="Title">Strike Back</td>
       </tr>
       <tr>
         <td>2015-10-25, 15:55</td>
         <td>2015-10-25, 16:45</td>
-        <td>Strike Back</td>
+        <td class="Title">Strike Back</td>
       </tr>
       <tr>
         <td>2015-10-25, 16:45</td>
         <td>2015-10-25, 17:35</td>
-        <td>Strike Back</td>
+        <td class="Title">Strike Back</td>
       </tr>
       <tr>
         <td>2015-10-25, 17:35</td>
         <td>2015-10-25, 18:20</td>
-        <td>Strike Back</td>
+        <td class="Title">Strike Back</td>
       </tr>
       <tr>
         <td>2015-10-25, 18:20</td>
         <td>2015-10-25, 19:10</td>
-        <td>Strike Back</td>
+        <td class="Title">Strike Back</td>
       </tr>
       <tr>
         <td>2015-10-25, 19:10</td>
         <td>2015-10-25, 20:10</td>
-        <td>Real Time With Bill Maher</td>
+        <td class="Title">Real Time With Bill Maher</td>
       </tr>
       <tr>
         <td>2015-10-25, 20:10</td>
         <td>2015-10-25, 20:35</td>
-        <td>Doll &amp; Em</td>
+        <td class="Title">Doll &amp; Em</td>
       </tr>
       <tr>
         <td>2015-10-25, 20:35</td>
         <td>2015-10-25, 21:00</td>
-        <td>Doll &amp; Em</td>
+        <td class="Title">Doll &amp; Em</td>
       </tr>
       <tr>
         <td>2015-10-25, 21:00</td>
         <td>2015-10-25, 21:45</td>
-        <td>The Jinx: The Life and Deaths of Robert Durst</td>
+        <td class="Title">The Jinx: The Life and Deaths of Robert Durst</td>
       </tr>
       <tr>
         <td>2015-10-25, 21:45</td>
         <td>2015-10-25, 22:25</td>
-        <td>The Jinx: The Life and Deaths of Robert Durst</td>
+        <td class="Title">The Jinx: The Life and Deaths of Robert Durst</td>
       </tr>
       <tr>
         <td>2015-10-25, 22:25</td>
         <td>2015-10-25, 23:25</td>
-        <td>Game of Thrones</td>
+        <td class="Title">Game of Thrones</td>
       </tr>
       <tr>
         <td>2015-10-25, 23:25</td>
         <td>2015-10-26, 00:25</td>
-        <td>Game of Thrones</td>
+        <td class="Title">Game of Thrones</td>
       </tr>
       <tr>
         <td>2015-10-26, 00:25</td>
         <td>2015-10-26, 01:45</td>
-        <td>Hatfields and McCoys: Bad Blood</td>
+        <td class="Title">Hatfields and McCoys: Bad Blood</td>
       </tr>
     </table>
     <table>
+      <caption>svt1hd.svt.se</caption>
       <tr>
-        <th>svt1hd.svt.se</th>
+        <th>Start Time</th>
+        <th>Stop Time</th>
+        <th>Title</th>
       </tr>
       <tr>
         <td>2015-10-25, 03:10</td>
         <td>2015-10-25, 03:40</td>
-        <td>Karl Johan</td>
+        <td class="Title">Karl Johan</td>
       </tr>
       <tr>
         <td>2015-10-25, 04:05</td>
         <td>2015-10-25, 05:40</td>
-        <td>Columbo</td>
+        <td class="Title">Columbo</td>
       </tr>
       <tr>
         <td>2015-10-25, 05:40</td>
         <td>2015-10-25, 06:25</td>
-        <td>Go'kväll</td>
+        <td class="Title">Go'kväll</td>
       </tr>
       <tr>
         <td>2015-10-25, 06:25</td>
         <td>2015-10-25, 07:25</td>
-        <td>Plus</td>
+        <td class="Title">Plus</td>
       </tr>
       <tr>
         <td>2015-10-25, 07:25</td>
         <td>2015-10-25, 08:25</td>
-        <td>Mitt i naturen</td>
+        <td class="Title">Mitt i naturen</td>
       </tr>
       <tr>
         <td>2015-10-25, 08:25</td>
         <td>2015-10-25, 09:20</td>
-        <td>Minnenas television</td>
+        <td class="Title">Minnenas television</td>
       </tr>
       <tr>
         <td>2015-10-25, 09:20</td>
         <td>2015-10-25, 10:30</td>
-        <td>Alpint</td>
+        <td class="Title">Alpint</td>
       </tr>
       <tr>
         <td>2015-10-25, 10:30</td>
         <td>2015-10-25, 10:35</td>
-        <td>K-märkts modärna</td>
+        <td class="Title">K-märkts modärna</td>
       </tr>
       <tr>
         <td>2015-10-25, 10:35</td>
         <td>2015-10-25, 11:05</td>
-        <td>Kobra</td>
+        <td class="Title">Kobra</td>
       </tr>
       <tr>
         <td>2015-10-25, 11:05</td>
         <td>2015-10-25, 11:35</td>
-        <td>Träna med Kalle</td>
+        <td class="Title">Träna med Kalle</td>
       </tr>
       <tr>
         <td>2015-10-25, 11:35</td>
         <td>2015-10-25, 12:35</td>
-        <td>Moraeus med mera</td>
+        <td class="Title">Moraeus med mera</td>
       </tr>
       <tr>
         <td>2015-10-25, 12:35</td>
         <td>2015-10-25, 13:45</td>
-        <td>Alpint</td>
+        <td class="Title">Alpint</td>
       </tr>
       <tr>
         <td>2015-10-25, 13:45</td>
         <td>2015-10-25, 14:00</td>
-        <td>Svenska hemligheter</td>
+        <td class="Title">Svenska hemligheter</td>
       </tr>
       <tr>
         <td>2015-10-25, 14:00</td>
         <td>2015-10-25, 14:30</td>
-        <td>Robins</td>
+        <td class="Title">Robins</td>
       </tr>
       <tr>
         <td>2015-10-25, 14:30</td>
         <td>2015-10-25, 14:40</td>
-        <td>Tiffany Persson arbetstränar</td>
+        <td class="Title">Tiffany Persson arbetstränar</td>
       </tr>
       <tr>
         <td>2015-10-25, 14:40</td>
         <td>2015-10-25, 15:40</td>
-        <td>Morgans mission</td>
+        <td class="Title">Morgans mission</td>
       </tr>
       <tr>
         <td>2015-10-25, 15:40</td>
         <td>2015-10-25, 16:30</td>
-        <td>Downton Abbey</td>
+        <td class="Title">Downton Abbey</td>
       </tr>
       <tr>
         <td>2015-10-25, 16:30</td>
         <td>2015-10-25, 17:00</td>
-        <td>Enduro: Gotland grand national</td>
+        <td class="Title">Enduro: Gotland grand national</td>
       </tr>
       <tr>
         <td>2015-10-25, 17:00</td>
         <td>2015-10-25, 17:55</td>
-        <td>Ridsport: Världscuphoppning</td>
+        <td class="Title">Ridsport: Världscuphoppning</td>
       </tr>
       <tr>
         <td>2015-10-25, 17:55</td>
         <td>2015-10-25, 18:00</td>
-        <td>Sportnytt</td>
+        <td class="Title">Sportnytt</td>
       </tr>
       <tr>
         <td>2015-10-25, 18:00</td>
         <td>2015-10-25, 18:10</td>
-        <td>Rapport</td>
+        <td class="Title">Rapport</td>
       </tr>
       <tr>
         <td>2015-10-25, 18:10</td>
         <td>2015-10-25, 18:15</td>
-        <td>Regionala nyheter</td>
+        <td class="Title">Regionala nyheter</td>
       </tr>
       <tr>
         <td>2015-10-25, 18:15</td>
         <td>2015-10-25, 19:00</td>
-        <td>Landet runt</td>
+        <td class="Title">Landet runt</td>
       </tr>
       <tr>
         <td>2015-10-25, 19:00</td>
         <td>2015-10-25, 19:30</td>
-        <td>Sportspegeln</td>
+        <td class="Title">Sportspegeln</td>
       </tr>
       <tr>
         <td>2015-10-25, 19:30</td>
         <td>2015-10-25, 19:55</td>
-        <td>Rapport</td>
+        <td class="Title">Rapport</td>
       </tr>
       <tr>
         <td>2015-10-25, 19:55</td>
         <td>2015-10-25, 20:00</td>
-        <td>Regionala nyheter</td>
+        <td class="Title">Regionala nyheter</td>
       </tr>
       <tr>
         <td>2015-10-25, 20:00</td>
         <td>2015-10-25, 21:00</td>
-        <td>Genikampen</td>
+        <td class="Title">Genikampen</td>
       </tr>
       <tr>
         <td>2015-10-25, 21:00</td>
         <td>2015-10-25, 22:00</td>
-        <td>Bron</td>
+        <td class="Title">Bron</td>
       </tr>
       <tr>
         <td>2015-10-25, 22:00</td>
         <td>2015-10-25, 22:50</td>
-        <td>Homeland</td>
+        <td class="Title">Homeland</td>
       </tr>
       <tr>
         <td>2015-10-25, 22:50</td>
         <td>2015-10-25, 22:55</td>
-        <td>Rapport</td>
+        <td class="Title">Rapport</td>
       </tr>
       <tr>
         <td>2015-10-25, 22:55</td>
         <td>2015-10-25, 23:45</td>
-        <td>Ice cream girls</td>
+        <td class="Title">Ice cream girls</td>
       </tr>
       <tr>
         <td>2015-10-25, 23:45</td>
         <td>2015-10-26, 00:45</td>
-        <td>Moraeus med mera</td>
+        <td class="Title">Moraeus med mera</td>
       </tr>
       <tr>
         <td>2015-10-26, 00:45</td>
         <td>2015-10-26, 00:55</td>
-        <td>Tiffany Persson arbetstränar</td>
+        <td class="Title">Tiffany Persson arbetstränar</td>
       </tr>
       <tr>
         <td>2015-10-26, 00:55</td>
         <td>2015-10-26, 01:40</td>
-        <td>Mr. Robot</td>
+        <td class="Title">Mr. Robot</td>
       </tr>
     </table>
     <table>
+      <caption>tv6.se</caption>
       <tr>
-        <th>tv6.se</th>
+        <th>Start Time</th>
+        <th>Stop Time</th>
+        <th>Title</th>
       </tr>
       <tr>
         <td>2015-10-26, 01:30</td>
         <td>2015-10-26, 02:00</td>
-        <td>How I Met Your Mother</td>
+        <td class="Title">How I Met Your Mother</td>
       </tr>
       <tr>
         <td>2015-10-26, 02:00</td>
         <td>2015-10-26, 02:25</td>
-        <td>2 1/2 män</td>
+        <td class="Title">2 1/2 män</td>
       </tr>
       <tr>
         <td>2015-10-26, 02:25</td>
         <td>2015-10-26, 02:55</td>
-        <td>Family Guy</td>
+        <td class="Title">Family Guy</td>
       </tr>
       <tr>
         <td>2015-10-26, 02:55</td>
         <td>2015-10-26, 04:25</td>
-        <td>Heroes Reborn</td>
+        <td class="Title">Heroes Reborn</td>
       </tr>
       <tr>
         <td>2015-10-26, 04:25</td>
         <td>2015-10-26, 04:50</td>
-        <td>Brooklyn Nine-Nine</td>
+        <td class="Title">Brooklyn Nine-Nine</td>
       </tr>
       <tr>
         <td>2015-10-26, 04:50</td>
         <td>2015-10-26, 05:15</td>
-        <td>American Dad</td>
+        <td class="Title">American Dad</td>
       </tr>
       <tr>
         <td>2015-10-26, 05:15</td>
         <td>2015-10-26, 05:35</td>
-        <td>American Dad</td>
+        <td class="Title">American Dad</td>
       </tr>
       <tr>
         <td>2015-10-26, 05:35</td>
         <td>2015-10-26, 05:59</td>
-        <td>Cops</td>
+        <td class="Title">Cops</td>
       </tr>
       <tr>
         <td>2015-10-26, 06:00</td>
         <td>2015-10-26, 06:45</td>
-        <td>The Vampire Diaries</td>
+        <td class="Title">The Vampire Diaries</td>
       </tr>
       <tr>
         <td>2015-10-26, 06:45</td>
         <td>2015-10-26, 07:35</td>
-        <td>Stargate SG-1</td>
+        <td class="Title">Stargate SG-1</td>
       </tr>
       <tr>
         <td>2015-10-26, 07:35</td>
         <td>2015-10-26, 08:00</td>
-        <td>Våra värsta år</td>
+        <td class="Title">Våra värsta år</td>
       </tr>
       <tr>
         <td>2015-10-26, 08:00</td>
         <td>2015-10-26, 08:30</td>
-        <td>Våra värsta år</td>
+        <td class="Title">Våra värsta år</td>
       </tr>
       <tr>
         <td>2015-10-26, 08:30</td>
         <td>2015-10-26, 09:00</td>
-        <td>TV-SHOP</td>
+        <td class="Title">TV-SHOP</td>
       </tr>
       <tr>
         <td>2015-10-26, 09:00</td>
         <td>2015-10-26, 09:30</td>
-        <td>The King of Queens</td>
+        <td class="Title">The King of Queens</td>
       </tr>
       <tr>
         <td>2015-10-26, 09:30</td>
         <td>2015-10-26, 10:00</td>
-        <td>The King of Queens</td>
+        <td class="Title">The King of Queens</td>
       </tr>
       <tr>
         <td>2015-10-26, 10:00</td>
         <td>2015-10-26, 10:30</td>
-        <td>My name is Earl</td>
+        <td class="Title">My name is Earl</td>
       </tr>
       <tr>
         <td>2015-10-26, 10:30</td>
         <td>2015-10-26, 11:00</td>
-        <td>Simpsons</td>
+        <td class="Title">Simpsons</td>
       </tr>
       <tr>
         <td>2015-10-26, 11:00</td>
         <td>2015-10-26, 11:30</td>
-        <td>Simpsons</td>
+        <td class="Title">Simpsons</td>
       </tr>
       <tr>
         <td>2015-10-26, 11:30</td>
         <td>2015-10-26, 12:30</td>
-        <td>Stargate SG-1</td>
+        <td class="Title">Stargate SG-1</td>
       </tr>
       <tr>
         <td>2015-10-26, 12:30</td>
         <td>2015-10-26, 13:00</td>
-        <td>Jims värld</td>
+        <td class="Title">Jims värld</td>
       </tr>
       <tr>
         <td>2015-10-26, 13:00</td>
         <td>2015-10-26, 13:30</td>
-        <td>The King of Queens</td>
+        <td class="Title">The King of Queens</td>
       </tr>
       <tr>
         <td>2015-10-26, 13:30</td>
         <td>2015-10-26, 14:00</td>
-        <td>The King of Queens</td>
+        <td class="Title">The King of Queens</td>
       </tr>
       <tr>
         <td>2015-10-26, 14:00</td>
         <td>2015-10-26, 14:30</td>
-        <td>Seinfeld</td>
+        <td class="Title">Seinfeld</td>
       </tr>
       <tr>
         <td>2015-10-26, 14:30</td>
         <td>2015-10-26, 15:00</td>
-        <td>Seinfeld</td>
+        <td class="Title">Seinfeld</td>
       </tr>
       <tr>
         <td>2015-10-26, 15:00</td>
         <td>2015-10-26, 15:30</td>
-        <td>Simpsons</td>
+        <td class="Title">Simpsons</td>
       </tr>
       <tr>
         <td>2015-10-26, 15:30</td>
         <td>2015-10-26, 16:00</td>
-        <td>Simpsons</td>
+        <td class="Title">Simpsons</td>
       </tr>
       <tr>
         <td>2015-10-26, 16:00</td>
         <td>2015-10-26, 16:30</td>
-        <td>Brooklyn Nine-Nine</td>
+        <td class="Title">Brooklyn Nine-Nine</td>
       </tr>
       <tr>
         <td>2015-10-26, 16:30</td>
         <td>2015-10-26, 17:00</td>
-        <td>Brooklyn Nine-Nine</td>
+        <td class="Title">Brooklyn Nine-Nine</td>
       </tr>
       <tr>
         <td>2015-10-26, 17:00</td>
         <td>2015-10-26, 17:30</td>
-        <td>Scrubs</td>
+        <td class="Title">Scrubs</td>
       </tr>
       <tr>
         <td>2015-10-26, 17:30</td>
         <td>2015-10-26, 18:00</td>
-        <td>Scrubs</td>
+        <td class="Title">Scrubs</td>
       </tr>
       <tr>
         <td>2015-10-26, 18:00</td>
         <td>2015-10-26, 18:30</td>
-        <td>How I Met Your Mother</td>
+        <td class="Title">How I Met Your Mother</td>
       </tr>
       <tr>
         <td>2015-10-26, 18:30</td>
         <td>2015-10-26, 19:00</td>
-        <td>How I Met Your Mother</td>
+        <td class="Title">How I Met Your Mother</td>
       </tr>
       <tr>
         <td>2015-10-26, 19:00</td>
         <td>2015-10-26, 19:30</td>
-        <td>Anger Management</td>
+        <td class="Title">Anger Management</td>
       </tr>
       <tr>
         <td>2015-10-26, 19:30</td>
         <td>2015-10-26, 20:00</td>
-        <td>Simpsons</td>
+        <td class="Title">Simpsons</td>
       </tr>
       <tr>
         <td>2015-10-26, 20:00</td>
         <td>2015-10-26, 20:30</td>
-        <td>Simpsons</td>
+        <td class="Title">Simpsons</td>
       </tr>
       <tr>
         <td>2015-10-26, 20:30</td>
         <td>2015-10-26, 21:00</td>
-        <td>Simpsons</td>
+        <td class="Title">Simpsons</td>
       </tr>
       <tr>
         <td>2015-10-26, 21:00</td>
         <td>2015-10-26, 21:30</td>
-        <td>2 1/2 män</td>
+        <td class="Title">2 1/2 män</td>
       </tr>
       <tr>
         <td>2015-10-26, 21:30</td>
         <td>2015-10-26, 22:00</td>
-        <td>Anger Management</td>
+        <td class="Title">Anger Management</td>
       </tr>
       <tr>
         <td>2015-10-26, 22:00</td>
         <td>2015-10-26, 22:30</td>
-        <td>Last Man on Earth</td>
+        <td class="Title">Last Man on Earth</td>
       </tr>
       <tr>
         <td>2015-10-26, 22:30</td>
         <td>2015-10-26, 23:00</td>
-        <td>Family Guy</td>
+        <td class="Title">Family Guy</td>
       </tr>
       <tr>
         <td>2015-10-26, 23:00</td>
         <td>2015-10-26, 23:30</td>
-        <td>American Dad</td>
+        <td class="Title">American Dad</td>
       </tr>
       <tr>
         <td>2015-10-26, 23:30</td>
         <td>2015-10-27, 00:00</td>
-        <td>Scrubs</td>
+        <td class="Title">Scrubs</td>
       </tr>
       <tr>
         <td>2015-10-27, 00:00</td>
         <td>2015-10-27, 00:30</td>
-        <td>Scrubs</td>
+        <td class="Title">Scrubs</td>
       </tr>
       <tr>
         <td>2015-10-27, 00:30</td>
         <td>2015-10-27, 01:00</td>
-        <td>How I Met Your Mother</td>
+        <td class="Title">How I Met Your Mother</td>
       </tr>
     </table>
   </body>
