--- a/TvGuide.html
+++ b/TvGuide.html
@@ -11,7 +11,7 @@
   <!-- body tag -->
   <body>
     <div>
-      <table>
+      <table cols="100 100 100pt">
         <caption>sv.hbonordic.tv</caption>
         <tr>
           <th>Start Time</th>
@@ -156,7 +156,7 @@
       </table>
     </div>
     <div>
-      <table>
+      <table cols="100 100 100pt">
         <caption>svt1hd.svt.se</caption>
         <tr>
           <th>Start Time</th>
@@ -336,7 +336,7 @@
       </table>
     </div>
     <div>
-      <table>
+      <table cols="100 100 100pt">
         <caption>tv6.se</caption>
         <tr>
           <th>Start Time</th>
