Added comments and removed unneccesary parts
+ Adapted things to not use the removed parts

--- a/TvGuide.html
+++ b/TvGuide.html
@@ -11,7 +11,7 @@
   <!-- body tag -->
   <body>
     <div>
-      <table cols="100 100 100pt">
+      <table cols="1 1 1">
         <caption>sv.hbonordic.tv</caption>
         <tr>
           <th>Start Time</th>
@@ -156,7 +156,7 @@
       </table>
     </div>
     <div>
-      <table cols="100 100 100pt">
+      <table cols="1 1 1">
         <caption>svt1hd.svt.se</caption>
         <tr>
           <th>Start Time</th>
@@ -336,7 +336,7 @@
       </table>
     </div>
     <div>
-      <table cols="100 100 100pt">
+      <table cols="1 1 1">
         <caption>tv6.se</caption>
         <tr>
           <th>Start Time</th>
