Added the logos to the web page

--- a/TvGuide.html
+++ b/TvGuide.html
@@ -10,8 +10,9 @@
   </head>
   <!-- body tag -->
   <body>
-    <div>
+    <div align="center">
       <table cols="1 1 1">
+        <img src="Logos/sv.hbonordic.tv.png" alt="logo" align="middle"/>
         <caption>sv.hbonordic.tv</caption>
         <tr>
           <th>Start Time</th>
@@ -155,8 +156,9 @@
         </tr>
       </table>
     </div>
-    <div>
+    <div align="center">
       <table cols="1 1 1">
+        <img src="Logos/svt1hd.svt.se.png" alt="logo" align="middle"/>
         <caption>svt1hd.svt.se</caption>
         <tr>
           <th>Start Time</th>
@@ -335,8 +337,9 @@
         </tr>
       </table>
     </div>
-    <div>
+    <div align="center">
       <table cols="1 1 1">
+        <img src="Logos/tv6.se.png" alt="logo" align="middle"/>
         <caption>tv6.se</caption>
         <tr>
           <th>Start Time</th>
