Created and linked and printer friendly pdf version of the site

--- a/TvGuide.html
+++ b/TvGuide.html
@@ -10,6 +10,7 @@
   </head>
   <!-- body tag -->
   <body>
+    <a href="TvGuide.pdf">A printer friendly PDF</a>
     <div align="center">
       <table cols="1 1 1">
         <img src="Logos/sv.hbonordic.tv.png" alt="logo" align="middle"/>
