Fixed some errors

--- a/TvGuide.html
+++ b/TvGuide.html
@@ -1,10 +1,12 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <!-- head tag -->
   <head>
     <!-- The meta tag -->
-    <meta http-equiv="Content-Type" content="text/html charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html charset=utf-8"></meta>
     <!-- Link the stylesheet -->
-    <link rel="stylesheet" type="text/css" href="TvGuide.css"/>
+    <link rel="stylesheet" type="text/css" href="TvGuide.css"></link>
     <!-- title tag -->
     <title>Tv Guide</title>
   </head>
@@ -12,8 +14,8 @@
   <body>
     <a href="TvGuide.pdf">A printer friendly PDF</a>
     <div align="center">
+      <img src="Logos/sv.hbonordic.tv.png" alt="logo"></img>
       <table cols="1 1 1">
-        <img src="Logos/sv.hbonordic.tv.png" alt="logo" align="middle"/>
         <caption>sv.hbonordic.tv</caption>
         <tr>
           <th>Start Time</th>
@@ -158,8 +160,8 @@
       </table>
     </div>
     <div align="center">
+      <img src="Logos/svt1hd.svt.se.png" alt="logo"></img>
       <table cols="1 1 1">
-        <img src="Logos/svt1hd.svt.se.png" alt="logo" align="middle"/>
         <caption>svt1hd.svt.se</caption>
         <tr>
           <th>Start Time</th>
@@ -339,8 +341,8 @@
       </table>
     </div>
     <div align="center">
+      <img src="Logos/tv6.se.png" alt="logo"></img>
       <table cols="1 1 1">
-        <img src="Logos/tv6.se.png" alt="logo" align="middle"/>
         <caption>tv6.se</caption>
         <tr>
           <th>Start Time</th>
